--- a/src/main/resources/Tictactoe.fxml
+++ b/src/main/resources/Tictactoe.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.bussler.tictactoe.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.bussler.tictactoe.fx.Controller">
    <center>
       <GridPane fx:id="grid" alignment="CENTER" maxHeight="2000.0" maxWidth="2400.0" prefHeight="10.0" prefWidth="10.0" style="-fx-background-color: darkred; -fx-border-color: orange       ; -fx-border-width: 5;" BorderPane.alignment="CENTER">
         <columnConstraints>
